--- a/components/Navigation/navigation.css
+++ b/components/Navigation/navigation.css
@@ -4,7 +4,7 @@
     box-shadow: var(--box-shadow-clr);
     justify-content: flex-start;
     flex-shrink: 2;
-    height: 7rem;
+    height: 6.5rem;
     max-width: 100vw;
     padding-inline-start: 1rem;
     position: fixed;
